<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="377dp"
        android:layout_height="79dp"

        android:layout_marginTop="190dp"
        android:layout_marginBottom="32dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/forget_your_password"
        android:textAlignment="center"

        android:textAllCaps="true"
        android:textColor="#6A4BC8"
        android:textSize="35sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="172dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        app:srcCompat="@drawable/lock"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="144dp"
        android:background="#00000000"
        android:clickable="true"
        android:drawablePadding="4sp"
        android:focusable="true"
        android:text="@string/back"
        android:textColor="#283593"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="341dp"
        android:layout_height="59dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:includeFontPadding="true"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/black"
        android:textColorHint="#1565C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/btn_forget"
        android:layout_width="278dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="screen"
        android:text="@string/send_reset_link"
        android:textAllCaps="false"
        android:textColorHint="#E82727"
        android:textColorLink="@color/white"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        app:rippleColor="#BC2626" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="368dp"
        android:layout_height="85dp"
        android:padding="10dp"

        android:text="@string/provide_your_account_s_email_for_which_you_wont_to_reset_your_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="317dp"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_forget"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>