<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/name"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/re_pass"
        android:layout_width="360dp"
        android:layout_height="53dp"

        android:clickable="false"
        android:contextClickable="false"
        android:drawableLeft="@drawable/ic_baseline_lock_24"

        android:drawablePadding="5sp"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:password="true"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />


    <EditText
        android:id="@+id/name"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:autofillHints="emailAddress"
        android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:autofillHints="emailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:includeFontPadding="true"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/ic_baseline_lock_24"

        android:drawableRight="@drawable/ic_baseline_visibility_24"
        android:drawablePadding="5sp"
        android:ems="5"
        android:hint="@string/password"


        android:inputType="textPassword"
        android:textColorHighlight="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.377"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Sign_in"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:background="#300000"
        android:backgroundTint="#00695C"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="113dp"
        android:foregroundGravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/image" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/emailid"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.195" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:minHeight="48dp"
        android:text="@string/read_and_agree_to"
        android:textColor="@color/bordercolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <TextView
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_marginBottom="42dp"
        android:text="@string/term_condition"
        android:textColor="@color/bordercolor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="238dp"
        android:layout_height="85dp"
        android:padding="10dp"
        android:background="#00000000"
        android:text="@string/already_have_an_account"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <!--    <CheckBox-->
<!--        android:id="@+id/checkBox1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginRight="26dp"-->
<!--        android:textColor="@color/bordercolor"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/emailid"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.299" />-->

    <TextView
        android:id="@+id/log"
        android:layout_width="116dp"
        android:layout_height="42dp"

        android:backgroundTint="@color/white"
        android:clickable="true"
        android:cursorVisible="true"
        android:drawableBottom="#B9783CC1"
        android:focusable="true"
        android:text="@string/log_in"
        android:background="#10000000"
        android:textAlignment="center"
        android:textColor="#FF8F00"
        android:textSize="28sp"
        android:textStyle="bold"
        app:drawableBottomCompat="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="360dp"
        android:layout_height="53dp"
        android:digits="0123456789+"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="5dp"
        android:drawableTint="#833232"
        android:ems="10"
        android:hint="Phone No."
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/Sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_pass"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/card1"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_gravity="center"-->
<!--        app:cardBackgroundColor="#dcdcdc"-->
<!--        app:cardCornerRadius="35dp"-->
<!--        android:visibility="invisible"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.915"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.309">-->

<!--        <ImageView-->
<!--            android:id="@+id/image"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginBottom="1dp"-->
<!--            android:outlineSpotShadowColor="@drawable/ic_baseline_check_24" />-->
<!--    </androidx.cardview.widget.CardView>-->


</androidx.constraintlayout.widget.ConstraintLayout>